--- a/style.css
+++ b/style.css
@@ -19,3 +19,24 @@ img {
   margin: 0 auto;
   width: 200px;
 }
+
+.btn-primary {
+  color: white;
+  background-color: blue;
+  border-color: darkblue;
+}
+
+.btn {
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.375rem 6px 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+}
+
+a {
+  cursor: pointer;
+}
